Fix Main Top Position logo on tablet size

--- a/style.css
+++ b/style.css
@@ -156,6 +156,7 @@ img {
   .logo-head {
     width: 150px;
     padding-top: 0 !important;
+    margin-top: 20px;
   }
 }
 
